# lc3b-rs

./: .gitignore  Cargo.toml  README.md
.github-actions/workflows/: github-pages.yml
.github/workflows/: github-pages.yml
lc3b/: Cargo.toml  README.md
lc3b-assembler/: Cargo.toml  README.md
lc3b-assembler/src/: lc3b_asm.pest  lib.rs
lc3b-isa/: Cargo.toml  README.md
lc3b-isa/src/: instruction.rs  lib.rs  opcode.rs  register.rs
lc3b-isa/tests/: add_instruction_test.rs  add_instructions.rs
lc3b-web/: Cargo.toml  build.rs
lc3b-web/templates/: index.html
lc3b/src/: constants.rs  error.rs  lib.rs
lc3b/src/abi/: instruction.rs
lc3b/src/callbacks/: callback_registry.rs  mod.rs
lc3b/src/computer/: computer.rs  mod.rs
lc3b/src/memory/: debug.rs  mod.rs
lc3b/src/program/: mod.rs
lc3b/src/wasm/: mod.rs
src/: lib.rs
src/abi/: mod.rs  opcode.rs
