[package]
name = "lc3b-assembler"
version = "0.1.2"
edition = "2021"
description = "LC-3B assembler"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
lc3b-isa = { path = "../lc3b-isa" }
eyre = "0.6"
