[package]
name = "lc3b-web"
version = "0.1.1"
edition = "2021"
description = "LC3B computer emulator app webserver"
license = "MIT"

[[bin]]
name = "lc3b-web"

[build-dependencies]
glob = "0.3"
wasm-pack = "0.13"
lc3b = { version = "0", path = "../lc3b" }

[dependencies]
axum = "0.7"
askama = "0.12.1"
askama_axum = "0.4.0"
tokio = { version = "1", features = ["full"] }
