[package]
name = "lc3b-web"
version = "0.1.5"
edition = "2021"
description = "LC-3b computer emulator app webserver"
license = "MIT"

[[bin]]
name = "lc3b-web"

[build-dependencies]
glob = "0.3"
wasm-pack = "0.13"
lc3b = { version = "0", path = "../lc3b" }

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "tokio",
    "http1",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
