[package]
authors = ["Xavier Lange <xrlange@gmail.com>"]
name = "lc3b"
version = "0.1.0"
edition = "2021"
description = "LC3B computer emulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
anyhow = "1"
thiserror = "1"
lc3b-assembler = { path = "../lc3b-assembler" }
lc3b-isa = { path = "../lc3b-isa" }

[lib]
crate-type = ["cdylib"]
